fixed card v-alignment in main

--- a/reactCourse/confusion/src/App.css
+++ b/reactCourse/confusion/src/App.css
@@ -33,3 +33,7 @@
 .navbar-dark {
   background-color: #512DA8;
 }
+
+img:not([alt]) {
+  filter: grayscale(100%);
+}
